--- a/frontend/src/components/NodePathHistory/NodePathHistory.module.css
+++ b/frontend/src/components/NodePathHistory/NodePathHistory.module.css
@@ -1,5 +1,5 @@
 .breadcrumbContainer {
-  max-width: 300px;
+  max-width: 400px;
   overflow: scroll;
 }
 
